<resources>
    <string name="app_name"> </string>
    <string name="google_browser_api">AIzaSyClpfgiCLOlgB9ZxnSLm6vaUj4bVyAmoWA</string>
    <string name="title_activity_home">Home</string>
    <string name="title_home"> </string>
    <string name="add_random_items">Add Random Items</string>
    <string name="message_no_results">Oops, couldn\'t find any results\nthat matched your filter</string>
    <string name="all_restaurants">All Restaurants</string>
    <string name="message_no_reviews">Be the first to leave a review!</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_rate__driver">Rate Driver</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="location_permission_denied">permission denied</string>
    <string name="permission_required_toast">require toast</string>
    <string name="permission_rationale_location">rationale location</string>
    <string name="final_calculate">%s + %s = RM%.2f</string>
    <string name="default_notification_channel_id">Notifications</string>
    <string name="default_notification_channel_name">Route Notification</string>
    <string name="FACEBOOK_APP_ID">399657284143336</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">f8bbfb46e950f6b1ca7b5f54bf3fecb7</string>
    <string name="driver_name">Driver Name :</string>
    <string name="phone">Phone :</string>
    <string name="rate">Rate :</string>
    <string name="btn_request_pickup">SEND REQUEST PICKUP</string>
    <string name="btn_call_driver">CALL DRIVER</string>
    <string name="btn_cancel">Cancel</string>
    <string name="banner_ad_unit_id">ca-app-pub-1735533551147084/8624039796</string>

    //pay services
    <string name="googlepay_button_content_description" translatable="false">Jom Ride</string>
    <string name="buy_with_googlepay_button_content_description" translatable="false">Buy with Jom Ride</string>
    <string name="save_to_googlepay_button_content_description" translatable="false">Save to Jom Ride</string>
    <string name="add_to_googlepay_button_content_description" translatable="false">Add to Jom Ride</string>

    <string name="store_name" translatable="false">SPI Online Store</string>
    <string name="googlepay_status_unavailable" translatable="false">Unfortunately, Jom Ride is not available on this phone.</string>
    <string name="googlepay_status_checking" translatable="false">Checking if Google Pay is available...</string>
    <string name="payments_show_name" translatable="false">Successfully received payment data for %s!</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="add_review">Add Review</string>
    <string name="hint_review">How was your experience?</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="header_filters">Filter</string>
    <string name="divider_bullet">•</string>
    <string name="value_any_category">All food</string>
    <string name="value_any_city">Anywhere</string>
    <string name="value_any_price">Any price</string>
    <string name="price_1">RM</string>
    <string name="price_2">RMRM</string>
    <string name="price_3">RMRMRM</string>
    <string name="fmt_num_ratings" translatable="false">(%d)</string>

    <string name="sorted_by_rating">sorted by rating</string>
    <string name="sorted_by_price">sorted by price</string>
    <string name="sorted_by_popularity">sorted by popularity</string>
    <string name="apply">Apply</string>

    <string name="sort_by_rating">Sort by Rating</string>
    <string name="sort_by_popularity">Sort by Popularity</string>
    <string name="sort_by_price">Sort by Price</string>
    <string name="you">You</string>
    <string name="economy">Economy ( Normal price )</string>
    <string name="luxury">Luxury ( 20% extra )</string>

    //categories
    <string-array name="categories">
        <item>@string/value_any_category</item>

        <item>Brunch</item>
        <item>Burgers</item>
        <item>Coffee</item>
        <item>Deli</item>
        <item>Dim Sum</item>
        <item>Indian</item>
        <item>Italian</item>
        <item>Mediterranean</item>
        <item>Mexican</item>
        <item>Pizza</item>
        <item>Ramen</item>
        <item>Sushi</item>
    </string-array>
    <string-array name="prices">
        <item>@string/value_any_price</item>

        <item>@string/price_1</item>
        <item>@string/price_2</item>
        <item>@string/price_3</item>
    </string-array>
    <string-array name="cities">
        <item>@string/value_any_city</item>

        <item>Albuquerque</item>
        <item>Arlington</item>
        <item>Atlanta</item>
        <item>Austin</item>
        <item>Baltimore</item>
        <item>Boston</item>
        <item>Charlotte</item>
        <item>Chicago</item>
        <item>Cleveland</item>
        <item>Colorado Springs</item>
        <item>Columbus</item>
        <item>Dallas</item>
        <item>Denver</item>
        <item>Detroit</item>
        <item>El Paso</item>
        <item>Fort Worth</item>
        <item>Fresno</item>
        <item>Houston</item>
        <item>Indianapolis</item>
        <item>Jacksonville</item>
        <item>Kansas City</item>
        <item>Las Vagas</item>
        <item>Long Beach</item>
        <item>Los Angeles</item>
        <item>Louisville</item>
        <item>Memphis</item>
        <item>Mesa</item>
        <item>Miami</item>
        <item>Milwaukee</item>
        <item>Nashville</item>
        <item>New York</item>
        <item>Oakland</item>
        <item>Oklahoma</item>
        <item>Omaha</item>
        <item>Philadelphia</item>
        <item>Phoenix</item>
        <item>Portland</item>
        <item>Raleigh</item>
        <item>Sacramento</item>
        <item>San Antonio</item>
        <item>San Diego</item>
        <item>San Francisco</item>
        <item>San Jose</item>
        <item>Tucson</item>
        <item>Tulsa</item>
        <item>Virginia Beach</item>
        <item>Washington</item>
    </string-array>

    <string-array name="sort_by">
        <item>@string/sort_by_rating</item>
        <item>@string/sort_by_popularity</item>
        <item>@string/sort_by_price</item>
    </string-array>
</resources>
