<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CallDriver">

    
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        app:cardElevation="10dp"
        app:cardCornerRadius="8dp">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="8dp">


         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/image_avatar"
             android:layout_width="96dp"
             android:layout_height="96dp"
             android:layout_margin="1dp"

             android:layout_gravity="center_horizontal"
             android:layout_marginTop="8dp"
             app:civ_border_color="@color/buttonPickupRequest"
             app:civ_border_width="1dp"

             app:srcCompat="@drawable/ic_terrain_black_24dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/driver_name"
                    android:textSize="20sp"
                    />

                <TextView
                    android:id="@+id/txt_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/driver_name"
                    android:textSize="20sp"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:orientation="horizontal">

                <TextView
                    android:text="@string/phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    />

                <TextView
                    android:id="@+id/txt_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    android:textSize="20sp"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:orientation="horizontal">

                <TextView
                    android:text="@string/rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    />

                <TextView
                    android:id="@+id/txt_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rate"
                    android:textSize="20sp"
                    />

            </LinearLayout>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_msg_driver"
                android:layout_marginTop="10dp"

                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:background="@color/buttonPickupRequest"
                android:textColor="@color/navigation"
                android:textStyle="bold"
                android:layout_marginBottom="16dp"
                android:text="@string/btn_request_pickup"/>


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:id="@+id/btn_call_driver"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:background="@color/buttonPickupRequest"
                android:textColor="@color/navigation"
                android:textStyle="bold"
                android:layout_marginBottom="16dp"
                android:text="@string/btn_call_driver"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:id="@+id/btn_cancel"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:background="@color/navigation"
                android:textColor="@color/buttonPickupRequest"
                android:textStyle="bold"
                android:layout_marginBottom="16dp"
                android:text="@string/btn_cancel"
                />

        </LinearLayout>

        
    </android.support.v7.widget.CardView>
</RelativeLayout>